updaet the background matrix code and set eliza img in footer

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </style>
     </head>
     <body>
-    <div class="matrix-background" id="matrix"></div>
+        <canvas class="matrix-bg" id="matrixCanvas"></canvas>
     
     <section class="hero">
       <div class="logo">ai16z</div>
@@ -70,6 +70,10 @@
         <div class="stat-label">Singularity ETA</div>
       </div>
     </div>
+
+    <footer style="text-align: center; padding: 2rem; margin-top: 2rem;">
+        <img src="IMG_4108.webp" alt="eliza" style="border-radius: 10px; box-shadow: 0 0 20px var(--neon-purple);">
+    </footer>
     
     <script src="script.js"></script>
     </body>
