--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="socials">
         <a href="https://github.com/ai16z" class="social-link" target="_blank">GitHub</a>
         <a href="https://x.com/pmairca" class="social-link" target="_blank">X</a>
-        <a href="https://www.daos.fun/HeLp6NuQkmYB4pYWo2zYs22mESHXPQYzXbB8n4V98jwC" class="social-link" target="_blank">DAO</a>
+        <a href="https://daos.fun/HeLp6NuQkmYB4pYWo2zYs22mESHXPQYzXbB8n4V98jwC" class="social-link" target="_blank">DAO</a>
         <a href="https://discord.gg/P4uxZJFAdP" class="social-link" target="_blank">Discord</a>
       </div>
     </section>
