updating all responsive styles, much better now. Resolve #8

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html><head><base href="." />
+<html><head><meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <base href="." />
     <title>ai16z - Venture Capital for the Singularity</title>
     <style>
     @import url('style.css');
