trying a different way to get the matrix code to show on live

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </style>
     </head>
     <body>
-        <canvas class="matrix-bg" id="matrixCanvas"></canvas>
+        <canvas id="matrixCanvas"></canvas>
     
     <section class="hero">
       <div class="logo">ai16z</div>
