--- a/index.html
+++ b/index.html
@@ -673,7 +673,7 @@
             physics-based compute and e/acc principles
           </p>
           <div class="developer-credit">
-            Developed and maintained by: <a href="https://x.com/dreaminglucid22" target="_blank" class="developer-link">@dreaminglucid22</a>
+            Developed and maintained by ai16z partner: <a href="https://x.com/dreaminglucid22" target="_blank" class="developer-link">@dreaminglucid22</a>
           </div>
         </div>
       </footer>
