--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@
               Trade $BeffAI on Raydium
             </a>
             <a
-              href="https://dexscreener.com/solana/ayyj6zt9zygcluubbd28fmxczbhmuatcsuzfcilgxnfy"
+              href="https://www.dextools.io/app/en/solana/pair-explorer/AyYJ6ZT9zyGcLuuBBD28fmxcZbhmuaTcsuZfciLGxnFY?t=1731886387276"
               class="button button-secondary"
             >
               View $BeffAI Chart
@@ -647,7 +647,7 @@
           <div class="agent-card">
             <div class="agent-content">
               <p class="agent-description">
-                BasedBeffAI is trained on BasedBeffjezos's X posts for maximum e/acc accuracy
+                BasedBeffAI is trained on BasedBeffJezos's X posts for maximum e/acc accuracy
               </p>
               <div class="cta-group" style="margin-top: 3rem;">
                 <a
