--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@
               href="https://www.dextools.io/app/en/solana/pair-explorer/AyYJ6ZT9zyGcLuuBBD28fmxcZbhmuaTcsuZfciLGxnFY?t=1731886387276"
               class="button button-secondary"
             >
-              View $BeffAI Chart
+              View $BeffAI Chart on DEXTools
             </a>
           </div>
         </div>
